# maf-migrator

./: .gitignore  PLAN.md  README.md  corpus.yaml  pyproject.toml
docs/: corpus-inventory.md  targets.md
scripts/: corpus.py
src/maf_migrator/: aggregator.py  cli.py  mappings.yaml  reporter.py  scanner.py
tests/: test_analyze.py  test_corpus.py  test_guide_fixtures.py  test_inventory.py  test_mappings.py  test_package_pins.py  test_report.py  test_smoke.py
tests/fixtures/guide/: SOURCES.md
tests/fixtures/guide/basic_agent_creation/: before.py  expected_after.py
tests/fixtures/guide/messages/: before.py  expected_after.py
tests/fixtures/guide/model_client_openai/: before.py  expected_after.py
tests/fixtures/guide/streaming/: before.py  expected_after.py
tests/fixtures/guide/tool_creation/: before.py  expected_after.py
tests/fixtures/mini_projects/mixed/: autogen2_part.py  autogen4_part.py
tests/fixtures/mini_projects/v02_single/: main.py
tests/fixtures/mini_projects/v04_multiagent/: main.py
tests/fixtures/mini_projects/v04_single/: main.py
tests/fixtures/report_snapshots/: mixed.txt  v04_single.txt
